--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/common": "^2.10",
+        "doctrine/inflector": "^1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
